修复native-image打包后jni调用supplier崩溃的问题